@@ -1,0 +1,5 @@
+package ru.bgcrm.model.param.address;
+
+public class AddressStreet extends AddressItem {
+    public static final String OBJECT_TYPE = "address_street";
+}
