@@ -27,3 +27,20 @@
 </html:form>
 
 <shell:state text="${l.l('Редактор города')}" help="kernel/setup.html#address"/>
+
+<c:if test="${not empty ctxParameterCache.getObjectTypeParameterList('address_city')}">
+	<% out.flush(); %>
+	<div>
+		<h2>${l.l('ПАРАМЕТРЫ')}</h2>
+
+		<div>
+			<c:url var="url" value="/user/parameter.do">
+				<c:param name="method" value="parameterList"/>
+				<c:param name="id" value="${form.param.addressCityId}"/>
+				<c:param name="objectType" value="address_city"/>
+				<c:param name="parameterGroup" value="-1"/>
+			</c:url>
+			<c:import url="${url}"/>
+		</div>
+	</div>
+</c:if>
