@@ -80,17 +80,19 @@
 	</div>
 </html:form>
 
-<% out.flush(); %>
-<div>
-	<h2>${l.l('ПАРАМЕТРЫ')}</h2>
-
+<c:if test="${not empty ctxParameterCache.getObjectTypeParameterList('address_house')}">
+	<% out.flush(); %>
 	<div>
-		<c:url var="url" value="/user/parameter.do">
-			<c:param name="method" value="parameterList"/>
-			<c:param name="id" value="${form.param['addressHouseId']}"/>
-			<c:param name="objectType" value="address_house"/>
-			<c:param name="parameterGroup" value="-1"/>
-		</c:url>
-		<c:import url="${url}"/>
+		<h2>${l.l('ПАРАМЕТРЫ')}</h2>
+
+		<div>
+			<c:url var="url" value="/user/parameter.do">
+				<c:param name="method" value="parameterList"/>
+				<c:param name="id" value="${form.param['addressHouseId']}"/>
+				<c:param name="objectType" value="address_house"/>
+				<c:param name="parameterGroup" value="-1"/>
+			</c:url>
+			<c:import url="${url}"/>
+		</div>
 	</div>
-</div>
+</c:if>
