@@ -44,3 +44,20 @@
 		</c:choose>
 	</jsp:attribute>
 </shell:state>
+
+<c:if test="${itemType eq 'street'}">
+	<% out.flush(); %>
+	<div>
+		<h2>${l.l('ПАРАМЕТРЫ')}</h2>
+
+		<div>
+			<c:url var="url" value="/user/parameter.do">
+				<c:param name="method" value="parameterList"/>
+				<c:param name="id" value="${form.param.addressItemId}"/>
+				<c:param name="objectType" value="address_street"/>
+				<c:param name="parameterGroup" value="-1"/>
+			</c:url>
+			<c:import url="${url}"/>
+		</div>
+	</div>
+</c:if>
